<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_layout"
        android:icon="@drawable/ic_grid"
        android:title="@string/menu_layout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_live"
        android:icon="@drawable/ic_live_tv"
        android:title="@string/menu_live_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_connection"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_connection"
        app:showAsAction="never" />
</menu>
